{
    "name": "IA_DefaultControls",
    "maps": [
        {
            "name": "Camera",
            "id": "ffec93ad-7047-4be7-a1e5-b7c0020bd4fd",
            "actions": [
                {
                    "name": "PossessCamera",
                    "type": "Button",
                    "id": "c73837c7-0746-4ad4-b49f-ca2e7eca4a1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "5e2e0fec-2d88-44f8-80e1-310969f32187",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UnpossessCamera",
                    "type": "Button",
                    "id": "e39ed77b-6300-4a70-87b4-ee4839757354",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7d1e7ec-9ea8-4400-ad85-d5a7704a66c2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22440a86-c335-46ab-a316-1c0c5b0a169c",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9edb5b79-ea74-4e15-adb5-88477315488a",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "PossessCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd028c91-6143-437f-8be9-f071ba1c6b87",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "PossessCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3231559-0b97-4d8c-9f3b-fac708e999bc",
                    "path": "<Mouse>/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "UnpossessCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1801153-2843-43e7-8095-c27dbd946c74",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "UnpossessCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}